# notionrs

./: .code-workspace  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
notionrs/: AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md
notionrs-schema/: Cargo.toml  README.md
notionrs-schema/src/: prelude.rs
notionrs-schema/src/object/: mod.rs  response.rs  select.rs  user.rs
notionrs-schema/src/object/block/: bulleted_list_item.rs  callout.rs  column_list.rs  embed.rs  paragraph.rs  to_do.rs
notionrs-schema/src/object/database/: created_by.rs  files.rs  number.rs  rich_text.rs
notionrs-schema/src/object/page/: created_by.rs  created_time.rs  date.rs  last_edited_by.rs  last_edited_time.rs  mod.rs  multi_select.rs  people.rs  relation.rs  rich_text.rs  rollup.rs  select.rs  url.rs
notionrs-schema/src/object/request/: mod.rs  sort.rs
notionrs/examples/: README.md  block_append_block_children.rs  block_delete_block.rs  block_get_block.rs  block_get_block_children.rs  block_update_block.rs  database_create_database.rs  database_query_data_source.rs  database_query_data_source_all.rs  database_query_database.rs  database_retrieve_data_source.rs  database_retrieve_database.rs  database_update_database.rs  page_create_page.rs  page_get_page.rs  page_get_page_property_item.rs  page_update_page.rs  user_get_self.rs  user_get_user.rs  user_list_users.rs
notionrs/src/: lib.rs  macro.rs  prelude.rs  trait.rs  util.rs
notionrs/src/block/: bookmark.rs  bulleted_list_item.rs  code.rs  table.rs  table_row.rs  to_do.rs  toggle.rs
notionrs/src/block/seed/: synced_block_origin.json
notionrs/src/client/: mod.rs
notionrs/src/client/async_task/: get_async_task.rs  mod.rs
notionrs/src/client/block/: append_block_children.rs  delete_block.rs  get_block.rs  get_block_children.rs  get_block_children_all.rs  mod.rs  query_meeting_notes.rs  update_block.rs
notionrs/src/client/comment/: create_comment.rs  delete_comment.rs  mod.rs  retrieve_comments.rs  update_comment.rs
notionrs/src/client/custom_emoji/: list_custom_emojis.rs  mod.rs
notionrs/src/client/data_source/: create_data_source.rs  list_data_source_templates.rs  mod.rs  query_data_source.rs  retrieve_data_source.rs  update_data_source.rs
notionrs/src/client/database/: create_database.rs  mod.rs  query_database.rs  query_database_all.rs  retrieve_database.rs  update_database.rs
notionrs/src/client/file_upload/: complete_file_upload.rs  create_file_upload.rs  list_file_upload.rs  list_file_uploads.rs  mod.rs  retrieve_file_upload.rs  send_file_upload.rs
notionrs/src/client/page/: create_page.rs  get_page.rs  get_page_markdown.rs  get_page_property_item.rs  mod.rs  move_page.rs  update_page.rs  update_page_markdown.rs
notionrs/src/client/search/: mod.rs  search_database.rs  (+1 more)
notionrs/src/database/: database_response.rs  sort.rs
notionrs/src/error/: mod.rs
notionrs/src/macro/: color_setters.rs  impl_display_from_string_field.rs  impl_from_as_ref.rs  mod.rs
notionrs/src/object/: color.rs  comment.rs  date.rs  emoji.rs  file.rs  icon.rs  language.rs  mod.rs  response.rs  select.rs  user.rs
notionrs/src/others/: custom_emoji.rs  emoji.rs  file.rs
notionrs/src/page/: page_response.rs
notionrs/src/test/: mod.rs
notionrs/src/user/: mod.rs  person.rs
notionrs/tests/: AGENTS.md  comment.rs  data_source_schema.rs  integration_test_readonly.rs  search.rs  tests.rs
notionrs/tests/block/: crud_audio_block.rs  crud_bookmark_block.rs  crud_breadcrumb_block.rs  crud_bulleted_list_item_block.rs  crud_callout_block.rs  crud_code_block.rs  crud_column_list_block.rs  crud_embed_block.rs  crud_equation_block.rs  crud_heading_block.rs  crud_numbered_list_item_block.rs  crud_paragraph_block.rs  crud_quote_block.rs  crud_synced_block.rs  crud_tab_block.rs  crud_table_block.rs  crud_to_do_block.rs  crud_toggle_block.rs  mod.rs
notionrs/tests/custom_emoji/: list_custom_emojis.rs
notionrs/tests/data_source/: create_data_source.rs  crud_data_source.rs  mod.rs  query_data_source.rs  query_data_source_all.rs  retrieve_data_source.rs
notionrs/tests/database/: create_database.rs  create_database_relation.rs  mod.rs  query_database.rs  query_database_all.rs  retrieve_database.rs  update_database.rs
notionrs/tests/file_upload/: list_file_upload.rs  upload.rs
notionrs/tests/mutable/: comment.rs  mod.rs  to_markdown.rs
notionrs/tests/page/: create_page_on_data_source.rs  crud_page.rs  crud_page_with_database.rs  get_page.rs  mod.rs  move_page.rs
notionrs/tests/readonly/: async_task.rs  mod.rs  search.rs  to_markdown.rs
notionrs/tests/user/: get_self.rs  get_user.rs  list_users.rs
notionrs_macro/: Cargo.toml  Justfile
notionrs_macro/src/: lib.rs  setter.rs
notionrs_macro/tests/: derive_setter.rs  qualified_paths.rs
notionrs_types/: AGENTS.md  Cargo.toml  Justfile  README.md
notionrs_types/src/: lib.rs  prelude.rs
notionrs_types/src/macro/: impl_display_from_string_field.rs
notionrs_types/src/object/: async_task.rs  comment.rs  date.rs  emoji_and_icon.rs  file.rs  file_upload.rs  icon.rs  language.rs  mod.rs  page_markdown.rs  parent.rs  response.rs  select.rs  user.rs
notionrs_types/src/serde/: date.rs
notionrs_webhooks/: Cargo.toml  README.md
notionrs_webhooks/examples/: basic.rs
notionrs_webhooks/src/: lib.rs  types.rs  verify_signature.rs
notionrs_webhooks/src/events/: comment.created.json  comment.deleted.json  comment.updated.json  data_source.content_updated.json  data_source.created.json  data_source.deleted.json  data_source.moved.json  data_source.schema_updated.json  data_source.undeleted.json  database.content_updated.json  database.created.json  database.deleted.json  database.moved.json  database.schema_updated.json  database.undeleted.json  page.content_updated.json  page.created.agent_parent.json  page.created.json  page.deleted.json  page.locked.json  page.moved.json  page.properties_updated.json  page.undeleted.json  page.unlocked.json
(+609 files in other folders)
