[workspace]
resolver = "3"
members = ["notionrs", "notionrs_macro", "notionrs_types", "notionrs_webhooks"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
authors = ["Ikuma Yamashita"]
repository = "https://github.com/46ki75/notionrs"
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-client"]
keywords = ["notion", "notion-api"]

[workspace.dependencies]
# Ser/De
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"

# time
time = { version = "0.3", features = [
    "serde",
    "parsing",
    "formatting",
    "macros",
] }

# HTTP Client
reqwest = { version = "0.13", features = [
    "gzip",
    "http2",
    "multipart",
    "query",
    "rustls",
], default-features = false }

# Error
thiserror = "2"
futures = "0.3.32"
bytes = "1.11.1"
dotenvy = "0.15.0"
serial_test = "3.4.0"

# Async Runtime
tokio = { version = "1.49", features = ["full"] }

# Macro
syn = { version = "2.0.117", features = ["derive", "parsing"] }
proc-macro2 = "1.0.106"
quote = "1.0.44"
