[package]
name = "notionrs"
description = "A Notion API client that provides type-safe request serialization and response deserialization"
version = "0.3.0"
edition = "2024"
authors = ["Ikuma Yamashita"]
repository = "https://github.com/46ki75/notionrs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/notionrs"
categories = ["web-programming::http-client"]
keywords = ["notion", "notion-api"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notionrs_types = { version = "0.3.0", path = "../notionrs_types" }
notionrs_macro = { version = "0.2.0", path = "../notionrs_macro" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }

thiserror = { workspace = true }

time = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
serial_test = { workspace = true }

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/default-tls", "reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
