[package]
name = "notionrs"
description = "A Notion API client that provides type-safe request serialization and response deserialization"
version = "0.10.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = "https://docs.rs/notionrs"
categories = { workspace = true }
keywords = { workspace = true }
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notionrs_types = { version = "0.8.0", path = "../notionrs_types" }
notionrs_macro = { version = "0.2.0", path = "../notionrs_macro" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
serde_urlencoded = { workspace = true }

thiserror = { workspace = true }

time = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
serial_test = { workspace = true }

[features]
default = ["rustls"]

rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
native-tls-no-alpn = ["reqwest/native-tls-no-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-vendored-no-alpn = ["reqwest/native-tls-vendored-no-alpn"]
