[package]
name = "notionrs_macro"
description = "Macro for generating Notion API client"
version = "0.2.0"
edition = "2024"
authors = ["Ikuma Yamashita"]
repository = "https://github.com/46ki75/notionrs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/notionrs"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
