[package]
name = "notionrs_macro"
description = "Macro for generating Notion API client"
version = "0.2.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = "https://docs.rs/notionrs"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
