[package]
name = "notionrs_macro"
description = "Builder-style setter derive used by notionrs"
version = "0.4.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = "https://docs.rs/notionrs"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
