[package]
name = "notionrs_types"
description = "Shared schema definitions for the Notion API used by the notionrs ecosystem."
version = "0.1.0"
edition = "2024"
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/notionrs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/notionrs_types"
categories = ["web-programming::http-client"]
keywords = ["notion", "notion-api"]
readme = "./README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"

notionrs_macro = { version = "0.2.0", path = "../notionrs_macro" }
time = { version = "0.3", features = [
    "serde",
    "parsing",
    "formatting",
    "macros",
] }

[dev-dependencies]
serde_json = "1.0"
