[package]
name = "notionrs_types"
description = "Shared schema definitions for the Notion API used by the notionrs ecosystem."
version = "0.3.0"
edition = "2024"
authors = ["Ikuma Yamashita"]
repository = "https://github.com/46ki75/notionrs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/notionrs_types"
categories = ["web-programming::http-client"]
keywords = ["notion", "notion-api"]
readme = "./README.md"

[dependencies]
serde = { workspace = true }
serde_plain = { workspace = true }

notionrs_macro = { version = "0.2.0", path = "../notionrs_macro" }
time = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
