[package]
name = "notionrs_types"
description = "Shared schema definitions for the Notion API used by the notionrs ecosystem."
version = "0.7.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = "https://docs.rs/notionrs_types"
categories = { workspace = true }
keywords = { workspace = true }
readme = "./README.md"

[dependencies]
serde = { workspace = true }
serde_plain = { workspace = true }

notionrs_macro = { version = "0.2.0", path = "../notionrs_macro" }
time = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
