[package]
name = "notionrs_webhooks"
version = "0.1.0"
edition = "2024"
authors = ["Ikuma Yamashita"]
repository = "https://github.com/46ki75/notionrs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/notionrs_webhook"
categories = ["web-programming::http-client"]
keywords = ["notion", "notion-api"]
readme = "./README.md"

[dependencies]
hex = "0.4"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
