[package]
name = "notionrs_webhooks"
description = "Event deserialization and signature verification for Notion webhooks"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = "https://docs.rs/notionrs_webhook"
categories = ["web-programming::http-client"]
keywords = ["notion", "notion-api"]
readme = "./README.md"

[dependencies]
hex = "0.4"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
http = "1.4.0"
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
